# Sparky

./: .dockerignore  .gitignore  .gitmodules
SparkyCore/: CMakeLists.txt  CONTEXT.md
SparkyCore/src/: DllMain.cpp
SparkyCore/src/SDK/UE5/: GObjects.h  Types.h  UObject.h
SparkyCore/tf2/: README.md  Sparky.sln
SparkyCore/tf2/Amalgam/Amalgam/src/Core/: Core.cpp
SparkyCore/tf2/Amalgam/Amalgam/src/Features/ImGui/: Render.cpp
SparkyCore/tf2/Amalgam/Amalgam/src/SDK/: Vars.h
SparkyCore/tf2/Amalgam/Amalgam/src/Utils/ExceptionHandler/: ExceptionHandler.cpp
SparkyCore/tf2/Context/: Architecture.md
SparkyCore/tf2/Sparky/: Sparky.vcxproj  Sparky.vcxproj.filters  xorstr_replace.py
SparkyCore/tf2/Sparky/src/BytePatches/: BytePatches.cpp
SparkyCore/tf2/Sparky/src/Core/: Core.cpp
SparkyCore/tf2/Sparky/src/Features/Aimbot/: Aimbot.cpp
SparkyCore/tf2/Sparky/src/Features/Backtrack/: Backtrack.cpp  Backtrack.h
SparkyCore/tf2/Sparky/src/Features/CheaterDetection/: CheaterDetection.cpp
SparkyCore/tf2/Sparky/src/Features/Commands/: Commands.cpp
SparkyCore/tf2/Sparky/src/Features/Configs/: Configs.cpp  Configs.h
SparkyCore/tf2/Sparky/src/Features/CritHack/: CritHack.cpp
SparkyCore/tf2/Sparky/src/Features/EnginePrediction/: EnginePrediction.cpp
SparkyCore/tf2/Sparky/src/Features/ImGui/: Render.cpp
SparkyCore/tf2/Sparky/src/Features/Misc/: Misc.cpp
SparkyCore/tf2/Sparky/src/Features/NetworkFix/: NetworkFix.cpp
SparkyCore/tf2/Sparky/src/Features/Output/: Output.cpp
SparkyCore/tf2/Sparky/src/Features/Players/: PlayerCore.cpp  PlayerUtils.cpp  PlayerUtils.h
SparkyCore/tf2/Sparky/src/Features/Resolver/: Resolver.cpp
SparkyCore/tf2/Sparky/src/Features/Spectate/: Spectate.h
SparkyCore/tf2/Sparky/src/Features/Ticks/: Ticks.cpp
SparkyCore/tf2/Sparky/src/Features/Visuals/: Visuals.cpp  Visuals.h
SparkyCore/tf2/Sparky/src/Hooks/: CAchievementMgr_CheckAchievementsEnabled.cpp  CAttributeManager_AttribHookValue.cpp  CBaseAnimating_Interpolate.cpp  CBaseAnimating_MaintainSequenceTransitions.cpp  CBaseAnimating_SetSequence.cpp  CBaseAnimating_SetupBones.cpp  CBaseAnimating_UpdateClientSideAnimation.cpp  CBaseEntity_BaseInterpolatePart1.cpp  CBaseEntity_EstimateAbsVelocity.cpp  CBaseEntity_ResetLatched.cpp  CBaseEntity_SetAbsVelocity.cpp  CBaseEntity_WorldSpaceCenter.cpp  CBaseHudChatLine_InsertAndColorizeText.cpp  CBasePlayer_CalcObserverView.cpp  CBasePlayer_CalcView.cpp  CBasePlayer_CalcViewModelView.cpp  CBasePlayer_ItemPostFrame.cpp  CBaseViewModel_ShouldFlipViewModel.cpp  CClientModeShared_DoPostScreenSpaceEffects.cpp  CClientModeShared_OverrideView.cpp  CClientModeShared_ShouldDrawViewModel.cpp  CClientState_GetClientInterpAmount.cpp  CClientState_ProcessFixAngle.cpp  CHLClient_CreateMove.cpp  CHLClient_DispatchUserMessage.cpp  CHLClient_FrameStageNotify.cpp  CHLClient_LevelShutdown.cpp  CHLTVCamera_CalcView.cpp  CHudCrosshair_GetDrawPosition.cpp  CInput_GetUserCmd.cpp  CInput_ValidateUserCmd.cpp  CInventoryManager_ShowItemsPickedUp.cpp  CL_CheckForPureServerWhitelist.cpp  CL_Move.cpp  CL_ProcessPacketEntities.cpp  CL_ReadPackets.cpp  CMatchInviteNotification_OnTick.cpp  CMaterial_Uncache.cpp  CNetChannel_SendDatagram.cpp  CNetChannel_SendNetMsg.cpp  (+66 more)
SparkyCore/tf2/Sparky/src/SDK/: Globals.h  SDK.cpp  Vars.h
SparkyCore/tf2/Sparky/src/SDK/Definitions/: Definitions.h  Interfaces.h  NullInterfaces.cpp  Types.h
SparkyCore/tf2/Sparky/src/SDK/Events/: Events.cpp
SparkyCore/tf2/Sparky/src/Utils/ExceptionHandler/: ExceptionHandler.cpp
SparkyCore/tf2/Sparky/src/Utils/Hooks/: Hooks.cpp  Hooks.h
SparkyCore/tf2/Sparky/src/Utils/Interfaces/: Interfaces.cpp
SparkyCore/tf2/Sparky/src/Utils/Macros/: Macros.h
SparkyCore/tf2/Sparky/src/Utils/Memory/: Memory.cpp
SparkyCore/tf2/Sparky/src/Utils/Signatures/: Signatures.cpp
SparkyCore/tf2/Sparky/src/Utils/XorStr/: XorStr.h
SparkyCore/tf2/Spxarky/: README.md  Spxarky.sln
SparkyCore/tf2/Spxarky/.github/workflows/: msbuild.yml
SparkyCore/tf2/Spxarky/Spxarky/: Spxarky.vcxproj  Spxarky.vcxproj.filters  cpp.hint
SparkyCore/tf2/Spxarky/Spxarky/.github/workflows/: ci.yml
SparkyCore/tf2/Spxarky/Spxarky/src/Core/: Core.cpp
SparkyCore/tf2/Spxarky/Spxarky/src/Features/: Features.h
SparkyCore/tf2/Spxarky/Spxarky/src/SDK/: Globals.h  SDK.cpp  SDK.h  Vars.h
SparkyCore/tf2/Spxarky/configs/: demo_hvh.json  full_rage.json  hvh.json  hvh_spin.json  legit.json  legit_smooth.json  medic.json  passive.json  projectile_rage.json  rage.json  scout.json  sniper.json  sniper_headshot.json  soldier_jump.json  soldier_rage.json  spy.json
SparkyCore/tf2/Spxarky/test/: CMakeLists.txt  build_tests.sh  main.cpp  test_aimbot_melee_logic.cpp  test_all  test_configvar.cpp  test_fnv1a.cpp  test_math.cpp  test_misc.cpp  test_montecarlo_physics.cpp  test_optimizations.cpp  test_runner.h  test_skin_changer.cpp  test_spy_logic.cpp  test_types.h  test_ui_components.cpp  test_ui_logic.cpp  test_vec2.cpp  test_vec3.cpp  test_vmatrix.cpp
SparkyLoader/: CMakeLists.txt
SparkyLoader/include/: Logger.h  ManualMap.h  Protocol.h  UI.h
SparkyLoader/src/: Logger.cpp  ManualMap.cpp  UI.cpp  main.cpp
SparkyLoader/tests/: DummyDll.cpp  IntegrationTest.py  StaticScanner.py
SparkyLoader/user/: CMakeLists.txt  CONTEXT.md  toolchain-windows-mingw.cmake
SparkyLoader/user/include/: AntiDebug.h  CertPin.h  Logger.h  Protocol.h  StringCrypt.h  TlsLayer.h  UI.h  WebSocket.h
SparkyLoader/user/src/: Logger.cpp  ManualMap.cpp  UI.cpp  main.cpp
SparkyLoader/user/tests/: AntiCheatSim.cpp  DummyDll.cpp  DummyTarget.cpp  InjectDirect.cpp
SparkyLoader/user/tests/unit/: TestRunner.h  test_manualmap_validation.cpp  test_protocol.cpp
SparkyServer/: CMakeLists.txt  CONTEXT.md  Dockerfile  admin.py  docker-compose.yml  nginx.conf
SparkyServer/include/: Database.h  KeyVault.h  LicenseManager.h  RateLimiter.h  SecureString.h  XorStr.h
SparkyServer/scripts/: run-local.sh  setup.sh  sparky.service
SparkyServer/src/: Database.cpp  LicenseManager.cpp  main.cpp
SparkyServer/test/: bench_main.cpp  test_main.cpp
(+347 files in other folders)
